Add ruff, ruff-lsp, and zsh plugin install in config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -36,6 +36,12 @@
       stderr: true
       quiet: false
     -
+      command: ./zsh/install_plugins.sh
+      stdin: true
+      stdout: true
+      stderr: true
+      quiet: false
+    -
       command: ./vim/install_plugins.sh
       stdin: true
       stdout: true
