Add nvim plugins: avante, remote-nvim, and config updates

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,7 +19,7 @@
     ~/.zsh:
     ~/.zshenv: ./zsh/zshenv
     ~/.zshrc: ./zshrc
-
+    ~/.config/nvim: ./nvim
 - shell:
     - touch ~/.hushlogin
     -
