--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,7 +27,7 @@ remember_window_size            yes
 
 map cmd+enter new_window_with_cwd
 map cmd+w close_window_with_confirmation
-
+macos_option_as_alt left
 # ----- tab bar -----
 tab_bar_edge                top
 tab_bar_style               powerline
