--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,7 +25,7 @@ background_opacity              0.8
 background_blur                 30
 remember_window_size            yes
 
-map cmd+enter new_window_with_cwd
+map cmd+enter no_op
 map cmd+w close_window_with_confirmation
 macos_option_as_alt left
 # ----- tab bar -----
