refactor(structure): 按功能重构整个项目目录结构
对整个 dotfiles 仓库进行了大规模的结构重构，以提升整洁度和长期可维护性。

主要变更：
- 创建了 config/ 和 scripts/ 两个核心目录。
- **配置分离**: 所有应用的配置文件和目录（如 zsh, vim, nvim, kitty 等）均已移入 config/ 目录。
- **脚本分离**: 所有辅助脚本（如安装、更新脚本）均已移入 scripts/ 目录。
- **更新链接配置**: install.conf.yaml 已被完全更新，以反映新的文件结构，确保所有符号链接正确无误。
- **路径修正**: 更新了 zshrc 等文件中所有写死的内部路径。

这次重构使项目结构从“文件平铺”演变为“按功能组织”，使项目更清晰、更易于扩展。

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,68 +6,63 @@
 - clean: ["~"]
 
 - link:
-    ~/.bashrc:
-    ~/.config/karabiner/: ./karabiner
-    ~/.config/kitty/: ./kitty
-    ~/.config/yazi/: ./yazi
-    ~/.gitconfig:
-    ~/.hammerspoon:
-    ~/.profile:
-    ~/.p10k.zsh:
-    ~/.vim:
-    ~/.vimrc:
-    ~/.zsh:
-    ~/.zshenv: ./zsh/zshenv
-    ~/.zshrc: ./zshrc
-    ~/.config/nvim: ./nvim
-    ~/.config/zellij: ./zellij/config
+    ~/.bashrc: config/bash/bashrc
+    ~/.config/karabiner: config/karabiner
+    ~/.config/kitty: config/kitty
+    ~/.config/yazi: config/yazi
+    ~/.gitconfig: config/git/gitconfig
+    ~/.hammerspoon: config/hammerspoon
+    ~/.profile: config/bash/profile
+    ~/.p10k.zsh: config/zsh/p10k.zsh
+    ~/.vim: config/vim
+    ~/.vimrc: config/vim/vimrc
+    ~/.zsh: config/zsh
+    ~/.zshenv: config/zsh/zshenv
+    ~/.zshrc: config/zsh/zshrc
+    ~/.config/nvim: config/nvim
+    ~/.config/zellij: config/zellij/config
+
 - shell:
     - touch ~/.hushlogin
-    -
-      command: ./zsh/activate_zsh.sh
+    - command: scripts/china_mirrors.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./install-ohmyzsh.sh
+    - command: config/zsh/activate_zsh.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./zsh/install_plugins.sh
+    - command: scripts/install-ohmyzsh.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./vim/install_plugins.sh
+    - command: config/zsh/install_plugins.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./brew/0.install.sh
+    - command: config/vim/install_plugins.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./brew/1.brewInstallApps.sh
+    - command: config/brew/0.install.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
-    -
-      command: ./zellij/install.sh
+    - command: config/brew/1.brewInstallApps.sh
+      stdin: true
+      stdout: true
+      stderr: true
+      quiet: false
+    - command: config/zellij/install.sh
       stdin: true
       stdout: true
       stderr: true
       quiet: false
     - git submodule sync --recursive
     - git submodule update --init --recursive
-    - >
-      git clean -fdx
-      vim/pack/vendor/start/
-  # the following have to run after linking ~/.gitconfig
