refactor(vim): 使用 Git Submodule 管理 Vim 插件
将原有的手动克隆 Vim 插件的方式重构为使用 Git Submodules 进行管理。

主要变更：
- 将 nerdtree 和 vim-oscyank 插件转换为 Git 子模块。
- 创建了 .gitmodules 文件来跟踪这些外部依赖。
- 删除了旧的、多余的 config/vim/install_plugins.sh 脚本。
- 更新了 install.conf.yaml，移除了对上述已删除脚本的调用。

这次重构使 Vim 插件的管理更加规范、自动化，并解决了 git 嵌套仓库的警告。

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,9 @@
 [submodule "vim/pack/vendor/start/nerdtree"]
 	path = vim/pack/vendor/start/nerdtree
 	url = https://github.com/preservim/nerdtree.git
+[submodule "config/vim/pack/vendor/start/nerdtree"]
+	path = config/vim/pack/vendor/start/nerdtree
+	url = https://github.com/preservim/nerdtree
+[submodule "config/vim/pack/vendor/start/vim-oscyank"]
+	path = config/vim/pack/vendor/start/vim-oscyank
+	url = https://github.com/ojroques/vim-oscyank
